<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_about_app"
        android:selectable="false"
        android:layout="@layout/preference_about_header"
        android:title="@string/settings_about_tagline" />

    <Preference
        android:key="pref_about_description"
        android:selectable="false"
        android:summary="@string/settings_about_description" />

    <Preference
        android:key="pref_app_version"
        android:selectable="false" />

    <PreferenceCategory android:title="@string/settings_about_project_category">

        <Preference
            android:key="pref_about_github"
            android:title="@string/settings_about_github_title"
            android:summary="@string/settings_about_github_url">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_about_github_url" />
        </Preference>

        <Preference
            android:key="pref_about_license"
            android:title="@string/settings_about_license_title"
            android:summary="@string/settings_about_license_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_about_license_url" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_about_credits_category">

        <Preference
            android:key="pref_about_icons"
            android:selectable="false"
            android:title="@string/settings_about_icons_title"
            android:summary="@string/settings_about_icons_summary" />

        <Preference
            android:key="pref_about_font"
            android:selectable="false"
            android:title="@string/settings_about_font_title"
            android:summary="@string/settings_about_font_summary" />

    </PreferenceCategory>

</PreferenceScreen>
