<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/settings_donate_footer_a11y"
    android:focusable="true"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="24dp"
    android:paddingBottom="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:text="@string/settings_donate_footer_start"
        android:textColor="@color/secondaryText"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_car_favorite_filled" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:text="@string/settings_donate_footer_end"
        android:textColor="@color/secondaryText"
        android:textSize="14sp" />

</LinearLayout>
